--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,6 +1,8 @@
 <div id="search-component">
-  <h4>Hero Search</h4>
-  <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
+  <h4></h4>
+  <md-input-container class="example-full-width">
+    <input mdInput #searchBox id="search-box" (keyup)="search(searchBox.value)" placeholder="Hero Search"/>
+  </md-input-container>
   <div>
     <div *ngFor="let hero of heroes | async"
          (click)="gotoDetail(hero)" class="search-result" >
