--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <hero-card *ngFor="let hero of heroes" [hero]="hero"></hero-card>
+  <hero-card *ngFor="let hero of heroes" [hero]="hero" (onDeleted)="onDeleted()"></hero-card>
 </div>
 <hero-search></hero-search>
