--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,3 +24,7 @@
     <router-outlet></router-outlet>
   </div>
 </md-sidenav-container>
+
+<div class="add-hero">
+  <button md-fab><md-icon>add</md-icon></button>
+</div>
