adding hero-add route, moving FAB button for add-hero to own component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,3 +2,4 @@
   <hero-card *ngFor="let hero of heroes" [hero]="hero" (onDeleted)="onDeleted()"></hero-card>
 </div>
 <hero-search></hero-search>
+<hero-add-button></hero-add-button>
