--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <hero-card *ngFor="let hero of heroes" [hero]="hero" (onDeleted)="onDeleted()"></hero-card>
 </div>
+<hero-add-button></hero-add-button>
 
 
