making detail and new views nicer

--- a/src/app/hero-add/hero-add.component.html
+++ b/src/app/hero-add/hero-add.component.html
@@ -1,4 +1,4 @@
-<button (click)="goBack()">Back</button>
+<button md-button (click)="goBack()">Back</button>
 <div>
   <div>
     <md-input-container class="example-full-width">
