--- a/src/app/hero-add-button/hero-add-button.component.html
+++ b/src/app/hero-add-button/hero-add-button.component.html
@@ -1,3 +1,3 @@
 <div class="add-hero">
-  <button md-fab routerLink="/heroes/add"><md-icon>add</md-icon></button>
+  <button md-fab class="fab" routerLink="/heroes/add"><md-icon>add</md-icon></button>
 </div>
