--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,14 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  margin: 0px;
+html, body, app-root, md-sidenav-container, .container {
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
+    overflow: auto;
 }
